--- a/appspec.yml
+++ b/appspec.yml
@@ -4,9 +4,12 @@ files:
   - source: /
     destination: /var/app
 hooks:
+  AfterInstall:
+    - location: scripts/install.sh
+      runas: root
   ApplicationStart:
     - location: scripts/start.sh
-      timeout: 300
+      runas: root
   ApplicationStop:
     - location: scripts/stop.sh
-      timeout: 300
+      runas: root
