--- a/appspec.yml
+++ b/appspec.yml
@@ -5,7 +5,7 @@ files:
     destination: /var/app
 hooks:
   AfterInstall:
-    - location: scripts/install.sh
+    - location: scripts/after_install.sh
       runas: root
   ApplicationStart:
     - location: scripts/start.sh
